Fixed z-index bug

--- a/www/css/style-zero.windows.css
+++ b/www/css/style-zero.windows.css
@@ -3815,6 +3815,9 @@ ul.comment-thread {
 
 	z-index: 5000;
 }
+.answer-item.focused::after {
+	z-index: 5001;
+}
 
 /********************/
 /* COMMENT LISTINGS */
